# duskforge

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  files.cmake
docs/: modding-hello-flecs.md  modding-sdk-implementation-plan.md  modding-sdk.md
examples/mods/hello_flecs/: CMakeLists.txt  hello_flecs.cpp  mod.json
include/d/: d_file_select.h
include/dusk/: gx_helper.h
include/dusklight/: sdk.hpp
include/dusklight/modding/: components.hpp  events.hpp  log.hpp  version.hpp
src/d/: d_drawlist.cpp  d_file_select.cpp  d_meter_button.cpp
src/d/actor/: d_a_alink.cpp
src/dusk/modding/: game_bridge.cpp  game_bridge.hpp  mod_log.cpp  mod_log.hpp  mod_manager.cpp  mod_manager.hpp  mod_manifest.cpp  mod_manifest.hpp  sdk_world.cpp  sdk_world.hpp  shared_library.cpp  shared_library.hpp
src/dusk/ui/: settings.cpp  touch_controls.cpp  ui.cpp
src/f_op/: f_op_actor.cpp  f_op_actor_mng.cpp
src/m_Do/: m_Do_main.cpp
